# MeshiPhi

./: .buildinfo  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  Makefile  README.md  genindex.html  index.html  mkdocs.yml  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree
.doctrees/sections/: Code_overview.doctree  Command_line_interface.doctree  Examples.doctree  Installation.doctree  Outputs.doctree  testing_strategy.doctree
.doctrees/sections/Configuration/: Configuration_overview.doctree  Mesh_construction_config.doctree
.doctrees/sections/Dataloaders/: AddingDataloaders.doctree  DataLoaderInterface.doctree  Factory.doctree  overview.doctree
.doctrees/sections/Dataloaders/lut/: abstractLUT.doctree  index.doctree
.doctrees/sections/Dataloaders/scalar/: abstractScalar.doctree  index.doctree
.doctrees/sections/Dataloaders/vector/: abstractVector.doctree  index.doctree
.doctrees/sections/Mesh_Construction/: Mesh_construction_classes.doctree  Mesh_construction_overview.doctree  Mesh_validation.doctree
.doctrees/sections/Plotting/: mesh_plotting.doctree
.github/: pull_request_template.md
.github/workflows/: docs.yml  pypi.yml  test.yml
_sources/: index.rst.txt
autoapi/meshiphi/: index.html
autoapi/meshiphi/cli/: index.html
autoapi/meshiphi/config_validation/: index.html
autoapi/meshiphi/config_validation/config_validator/: index.html
autoapi/meshiphi/config_validation/mesh_schema/: index.html
autoapi/meshiphi/dataloaders/: index.html
autoapi/meshiphi/dataloaders/dataloader_interface/: index.html
autoapi/meshiphi/dataloaders/factory/: index.html
autoapi/meshiphi/dataloaders/lut/: index.html
autoapi/meshiphi/dataloaders/scalar/: index.html
autoapi/meshiphi/dataloaders/vector/: index.html
autoapi/meshiphi/mesh_generation/: index.html
autoapi/meshiphi/mesh_generation/boundary/: index.html
autoapi/meshiphi/mesh_plotting/: index.html
autoapi/meshiphi/mesh_validation/: index.html
autoapi/meshiphi/test_automation/: index.html
autoapi/meshiphi/utils/: index.html
autoapi/summary/: index.html
cli/: index.html
config/mesh_construction/: index.html
config/overview/: index.html
contributing/: index.html
dataloaders/adding/: index.html
dataloaders/factory/: index.html
dataloaders/interface/: index.html
dataloaders/lut/: index.html
dataloaders/overview/: index.html
dataloaders/scalar/: index.html
dataloaders/vector/: index.html
development/: index.html
docs/: cli.md  contributing.md  development.md  examples.md  index.md  installation.md  mesh_construction.md  output.md  overview.md  plotting.md  requirements.txt
docs/config/: mesh_construction.md  overview.md
docs/dataloaders/: adding.md  factory.md  interface.md  lut.md  overview.md  scalar.md  vector.md
docs/dataloaders/scalar/: abstract.md
docs/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/html/.doctrees/: environment.pickle  index.doctree
docs/html/_sources/: index.rst.txt
docs/html/_static/: documentation_options.js
docs/html/sections/: Code_overview.html  Command_line_interface.html  Examples.html  Installation.html  Outputs.html
docs/mesh_construction/: classes.md  index.md
docs/source/: conf.py
docs/source/sections/: Command_line_interface.rst  Installation.rst  testing_strategy.rst
examples/: README.md  index.html
examples/environment_config/: real_example.config.json
installation/: index.html
mesh_construction/: index.html
mesh_construction/classes/: index.html
meshiphi/: __init__.py  cli.py  utils.py
meshiphi/config_validation/: config_validator.py  mesh_schema.py
meshiphi/dataloaders/: dataloader_interface.py  factory.py
meshiphi/dataloaders/lut/: abstract_lut.py  density.py  lut_csv.py  lut_geojson.py  lut_shapefile.py  scotland_ncmpa.py  thickness.py
meshiphi/dataloaders/scalar/: abstract_scalar.py  amsr.py  amsr_hourly.py  baltic_sea_ice.py  bsose_depth.py  bsose_sea_ice.py  dicenet.py  ecmwf_sig_wave_height.py  era5_max_wave_height.py  era5_mean_wave_direction.py  era5_sig_wave_height.py  era5_wave_period.py  era5_wind_dir.py  era5_wind_mag.py  gebco.py  icenet.py  icenet_diffusion.py  modis.py  scalar_csv.py  scalar_grf.py  shape.py  visual_iced.py
meshiphi/dataloaders/vector/: abstract_vector.py  baltic_current.py  duacs_current.py  era5_wave_direction_vector.py  era5_wind.py  north_sea_current.py  oras5_current.py  sose.py  vector_csv.py  vector_grf.py  vector_shape.py
meshiphi/mesh_generation/: aggregated_cellbox.py  boundary.py  cellbox.py  direction.py  environment_mesh.py  mesh.py  mesh_builder.py  metadata.py  neighbour_graph.py
meshiphi/mesh_plotting/: mesh_plotter.py
meshiphi/mesh_validation/: full_mesh_validator.py  mesh_comparator.py  mesh_validator.py  sampler.py
meshiphi/test_automation/: test_automater.py
output/: index.html
overview/: index.html
plotting/: index.html
search/: search_index.json
sections/: Code_overview.html  Command_line_interface.html  Examples.html  Installation.html  Outputs.html  testing_strategy.html
sections/Configuration/: Configuration_overview.html  Mesh_construction_config.html
sections/Dataloaders/: AddingDataloaders.html  DataLoaderInterface.html  Factory.html  overview.html
sections/Dataloaders/lut/: abstractLUT.html  index.html
sections/Dataloaders/scalar/: abstractScalar.html  index.html
sections/Dataloaders/vector/: abstractVector.html  index.html
sections/Mesh_Construction/: Mesh_construction_classes.html  Mesh_construction_overview.html  Mesh_validation.html
sections/Plotting/: mesh_plotting.html
tests/: conftest.py
tests/regression_tests/: mesh_test_functions.py  regression_test_utils.py  test_comparisons.py  test_mesh.py  utils.py
tests/unit_tests/: test_aggregated_cellbox.py  test_boundary.py  test_cellbox.py  test_cli.py  test_env_mesh.py  test_mesh_builder.py  test_mesh_validator.py  test_neighbour_graph.py  test_utils.py
(+253 files in other folders)
