[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "meshiphi"
description = "MeshiPhi: Earth's digital twin mapped on a non-uniform mesh"
authors = [
    {name = "Autonomous Marine Operations Planning (AMOP) Team, AI Lab, British Antarctic Survey", email = "amop@bas.ac.uk"}
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">= 3.8"
classifiers = [
    "Intended Audience :: Science/Research",
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: GIS",
]
keywords= ["Polar Science", "Geospatial", "Marine Science"]
dynamic = ["version"]

dependencies = [
    "dask",
    "geopandas",
    "jsonschema",
    "matplotlib",
    "netcdf4",
    "numpy>=1.21.6",
    "pandas>=1.3.5",
    "rioxarray",
    "shapely>=2.0.1",
    "scikit-learn",
    "scipy",
    "tqdm",
    "xarray",
    "cartopy",
    "rasterio"
]

[dependency-groups]
docs = [
    "mkdocs",
    "mkdocs-autoapi",
    "mkdocs-include-markdown-plugin",
    "mkdocstrings[python]",
    "mkdocs-material",
]
test = [
    "pytest",
    "pytest-xdist",
    "pytest-cov",
    "pytest-mock"
]
dev = [
    "pre-commit",
    "ruff",
    "mypy",
    "types-requests",
    "pytest",
    "pytest-xdist",
    "pytest-cov",
    "pytest-mock",
    "build",
    "twine"
]

[tool.setuptools]
packages = {find = {where = ["."], include = ["meshiphi*"]}}

[tool.setuptools.dynamic]
version = {attr = "meshiphi.__version__"}

[project.urls]
Homepage = "https://www.bas.ac.uk/project/logist-ai-for-environmentally-aware-decision-support/"
Documentation = "https://github.com/bas-logist/MeshiPhi"
Repository = "https://github.com/bas-logist/MeshiPhi"
Issues = "https://github.com/bas-logist/MeshiPhi/issues"

[project.scripts]
create_mesh = "meshiphi.cli:create_mesh_cli"
export_mesh = "meshiphi.cli:export_mesh_cli"
rebuild_mesh = "meshiphi.cli:rebuild_mesh_cli"
merge_mesh = "meshiphi.cli:merge_mesh_cli"
meshiphi_test = "meshiphi.cli:meshiphi_test_cli"

[tool.pytest.ini_options]
testpaths = ["tests/unit_tests", "tests/regression_tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
log_cli = true
log_format = "[%(asctime)s] %(levelname)s : %(message)s"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
addopts = [
    "--cov=meshiphi",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "--strict-markers",
]

[tool.coverage.run]
source = ["meshiphi"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.ruff]
target-version = "py38"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "PIE", # flake8-pie
    "PT",  # flake8-pytest-style
    "RET", # flake8-return
    "RUF", # Ruff-specific rules
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "PLR0913", # too many arguments
    "PLR2004", # magic value used in comparison
]

[tool.ruff.lint.isort]
known-first-party = ["meshiphi"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports
"tests/*" = ["ARG", "S101"]  # allow unused arguments and assert in tests

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
